# etaHEN

./: .gitignore  .gitmodules  CLAUDE.md  HYPERVISOR_BYPASS_RESEARCH.md  analyze_game.py  cfi_bypass.c  cfi_bypass.elf  dump_system.c  dump_system.elf  names2nid.py  send_elf_simple.py  setup-ps5-sdk.sh  trigger_dump.c  trigger_dump.elf
PS5 technical writeups/: fw403-hv-attack-surface-analysis.md
PSP/SYSTEM/: controls.ini  ppsspp.ini
Source Code/: CMakeLists.txt  CMakePresets.json  linker.x  send_elf.py
Source Code/bootstrapper/: CMakeLists.txt  get_size.cmake
Source Code/bootstrapper/Byepervisor/hen/: Makefile  hen.elf
Source Code/bootstrapper/Byepervisor/hen/include/shellcore_patches/: common.h
Source Code/bootstrapper/Byepervisor/src/: cfi_bypass.c  cfi_bypass.h  cfi_probe.cpp  main.cpp
Source Code/bootstrapper/source/: daemon.c  main.cpp
Source Code/daemon/: CMakeLists.txt
Source Code/daemon/assets/: fps_elf.elf  ps5debug.elf  shellui.elf
Source Code/daemon/include/: ipc.hpp
Source Code/daemon/source/: apic_scan.cpp  dumper_utils.cpp  embeddded_payloads.c  main.cpp  msg.cpp
Source Code/fps_elf/: CMakeLists.txt
Source Code/include/: msg.hpp
Source Code/libNidResolver/: CMakeLists.txt
Source Code/libNineS/: CMakeLists.txt
Source Code/libSelfDecryptor/: CMakeLists.txt
Source Code/libelfldr/: CMakeLists.txt
Source Code/libhijacker/: CMakeLists.txt
Source Code/libhijacker/source/elf/: elf.cpp
Source Code/shellui/: CMakeLists.txt
Source Code/shellui/assets/: etaHEN_Lite.sxml  etaHEN_toolbox.sxml
Source Code/shellui/src/: embedded_resources.s
Source Code/test_payload/: CMakeLists.txt  main.c
Source Code/unpacker/: CMakeLists.txt
Source Code/util/: CMakeLists.txt
Source Code/util/source/: common_utils.c
fuzzed_saves/: PARAM.SFO.all_entries_oob  PARAM.SFO.data_offset_oob  PARAM.SFO.invalid_magic  PARAM.SFO.key_offset_oob  PARAM.SFO.length_gt_max  PARAM.SFO.num_entries_overflow  PARAM.SFO.param_max_length_huge  PARAM.SFO.zero_size
fuzzed_saves_v2/: PARAM.SFO.circular_offset  PARAM.SFO.duplicate_key  PARAM.SFO.file_list_nullhash  PARAM.SFO.high_ascii  PARAM.SFO.int_as_string  PARAM.SFO.length_equals_max  PARAM.SFO.null_in_middle  PARAM.SFO.params_bad_userid  PARAM.SFO.params_zero_psid  PARAM.SFO.size_near_filesize  PARAM.SFO.string_as_int  PARAM.SFO.utf8_overlong
hv_research/: COMBINED_PROGRESS.md  Makefile  PROGRESS.md  hv_research.elf  hv_research2.elf  main.c  main2.c
hv_research/kmod/: Makefile  hv_kld.c  hv_kmod.c  hv_kmod.ko  linker.x
hv_research2/: Makefile  deploy_kstuff.sh  hv_research2.elf  kekcall.asm  kstuff.elf  main.c  payload_bin.c
hv_research2/kmod/: .gitignore  Makefile  hv_flat.c  hv_kld.c  hv_kld2.c  hv_kmod.ko  hv_kmod2.ko  linker.x
kstuff_build/: Makefile  kstuff.elf  main.c  payload_bin.c
kstuff_plugin/: .gitignore  Makefile  kstuff_plugin.elf  main.c
kstuff_plugin/kmod/: Makefile  apic_kmod.c
research/: analyze_kdata.py  analyze_mystery_flag.py  analyze_sysentvec.py  find_all_fptrs.py  find_hv_control.py  find_hv_data.py  find_security_flags.py  fptr_tester.js  luac0re_hall_of_fame_payload.py  luac0re_shellcode_loader.py  mystery_flag_tester.js  ps2emu_memory_finder.js  star_wars_racer_exploit_progress.md  sysentvec_data_tester.js
research/apic_scanner/: README.md  apic_scanner.c  remote_scanner.py
research/psp_saves/: memory_scanner.py  save_analyzer.py  sfo_analyzer.py  sfo_fuzzer.py  sfo_fuzzer_v2.py
research/umtx2-cfi-tester/: int64.js  main.js  umtx2.js
system_dump/: mini-syscore.elf
system_dump/system_common_lib/: ScePlayReady.self  ScePlayReady2.self  citroncore.elf  libSceAbstractLocal.sprx  libSceAbstractStorage.sprx  libSceAbstractTcs.sprx  libSceAbstractTwitter.sprx  libSceAbstractYoutube.sprx  libSceAcm.sprx  libSceAgc.sprx  libSceAgcDriver.sprx  libSceAgcVsh.sprx  libSceAjm.native.sprx  libSceAjm.sprx  libSceAjmi.sprx  libSceAmpr.sprx  libSceAppContent.sprx  libSceAppDbShellCoreClientForSystemService.sprx  libSceAppInstUtil.sprx  libSceAt9Enc.sprx  libSceAudio3d.sprx  libSceAudioIn.sprx  libSceAudioOut.sprx  libSceAudioPropagation.sprx  libSceAudiodec.native.sprx  libSceAudiodec.sprx  libSceAudiodecCpu.sprx  libSceAudiodecCpuDdp.sprx  libSceAudiodecCpuDtsHdLbr.sprx  libSceAudiodecCpuHevag.sprx  libSceAudiodecCpuM4aac.sprx  libSceAutoMounterClient.sprx  libSceAvPlayer.native.sprx  libSceAvPlayer.sprx  libSceAvPlayerStreaming.sprx  libSceAvSetting.sprx  libSceAvcap2.sprx  libSceAvcap2mvr.sprx  libSceBeisobmf.sprx  libSceBemp2sys.sprx  (+221 more)
system_dump/system_ex_app/: Sce.Vsh.AppContentUtilWrapper.dll.sprx  Sce.Vsh.DiscPlayer.dll.sprx  Sce.Vsh.Np.AppLaunchLink.dll.sprx  Sce.Vsh.Np.AppLaunchLink2.dll.sprx  Sce.Vsh.RemotePlay.dll.sprx  Sce.Vsh.Sl2.Sl2Manage.dll.sprx  Sce.Vsh.VideoRecordingWrapper.dll.sprx  app.exe.sprx  bdj.elf  gaikai-player.sprx  libAacs.sprx  libBdplus.sprx  libCprm.sprx  libCss.sprx  libScePSNowGkp.sprx  libSceShellCoreRedisModule.sprx  libSceTelemetryRedisModule.sprx  libbdj.prx  libgnmawt.prx  libjava.prx  libjavabase.sprx  libjimage.prx  libjli.prx  libjsig.prx  libnet.prx  libnio.prx  libprospero_wrapper.prx  libverify.prx  libzip.prx
system_dump/system_ex_common_ex_lib/: I18N.CJK.dll.sprx  I18N.MidEast.dll.sprx  I18N.Other.dll.sprx  I18N.Rare.dll.sprx  I18N.West.dll.sprx  I18N.dll.sprx  Microsoft.CSharp.dll.sprx  Mono.Data.Sqlite.dll.sprx  Mono.Data.Tds.dll.sprx  Mono.Security.dll.sprx  NKNetworkProcess.self  NKNetworkProcessMediaApp.self  NKNetworkProcessWebApp.self  NKUIProcess.self  NKWebProcess.self  NKWebProcessHeapLimited.self  NKWebProcessMediaApp.self  Newtonsoft.Json.PlayStation.dll.sprx  ReactNative.Components.Vsh.PSNowPlayer.dll.sprx  ReactNative.Components.Vsh.dll.sprx  ReactNative.Debug.DevSupport.dll.sprx  ReactNative.Modules.Vsh.Media.dll.sprx  ReactNative.Modules.Vsh.MediaPlayer.Contents.dll.sprx  ReactNative.Modules.Vsh.PSNowPlayer.dll.sprx  ReactNative.Modules.Vsh.Telemetry.Nq.dll.sprx  ReactNative.Modules.Vsh.Trophy.dll.sprx  ReactNative.Modules.Vsh.WebAppLauncher.dll.sprx  ReactNative.Vsh.Common.dll.sprx  Sce.Facebook.CSSLayout.dll.sprx  (+189 more)
(+50 files in other folders)
